@@ -13,9 +13,11 @@ from docutils.readers import standalone
 from docutils.writers import UnfilteredWriter
 from six import string_types, text_type
 
-from sphinx.transforms import ApplySourceWorkaround, ExtraTranslatableNodes, Locale, \
-    CitationReferences, DefaultSubstitutions, MoveModuleTargets, HandleCodeBlocks, \
+from sphinx.transforms import (
+    ApplySourceWorkaround, ExtraTranslatableNodes, PreserveTranslatableMessages, Locale,
+    CitationReferences, DefaultSubstitutions, MoveModuleTargets, HandleCodeBlocks,
     AutoNumbering, AutoIndexUpgrader, SortIds, RemoveTranslatableInline
+)
 from sphinx.util import import_object, split_docinfo
 
 
@@ -57,9 +59,10 @@ class SphinxStandaloneReader(SphinxBaseReader):
     """
     Add our own transforms.
     """
-    transforms = [ApplySourceWorkaround, ExtraTranslatableNodes, Locale, CitationReferences,
-                  DefaultSubstitutions, MoveModuleTargets, HandleCodeBlocks,
-                  AutoNumbering, AutoIndexUpgrader, SortIds, RemoveTranslatableInline]
+    transforms = [ApplySourceWorkaround, ExtraTranslatableNodes, PreserveTranslatableMessages,
+                  Locale, CitationReferences, DefaultSubstitutions, MoveModuleTargets,
+                  HandleCodeBlocks, AutoNumbering, AutoIndexUpgrader, SortIds,
+                  RemoveTranslatableInline, PreserveTranslatableMessages]
 
 
 class SphinxI18nReader(SphinxBaseReader):
