@@ -4,6 +4,7 @@ CONTENTS
 .. toctree::
    :maxdepth: 2
    :numbered:
+   :caption: Table of Contents
 
    subdir/contents
    bom
